# Polygonal-Puzzle

./: .gitignore  Cargo.toml  README.md  clippy.toml
src/: constants.rs  iterators.rs  lib.rs  main.rs  polygon_matcher.rs  result_output.rs  shapes.rs  traits.rs  util.rs
src/iterators/: alternate_iterator.rs  edge_iterator.rs  vertex_iterator.rs
src/result_output/: desmos.rs  paths.rs  svg.rs
src/result_output/svg/: path_group.rs  paths.rs  shape_to_svg.rs
src/shapes/: point.rs  polygon.rs  polyline_set.rs  segment.rs
src/traits/: common_boundary.rs  desmos.rs  intersection.rs
test/: input  polygon_matcher.rs
tests/: macros.rs  polygon_matcher_test.rs  test_case.rs
tests/data/: boundary_count  input  output
