[package]
name = "polygon_puzzle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6.0"
crossbeam = "0.8.2"
svg = "0.12.1"

[dev-dependencies]
test-case = "2.2.2"
rand = "0.8.5"

[profile.test]
opt-level = 3
